--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=localhost;Database=assignmentsystem;Uid=sqluser;Pwd=password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
