--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection" : "Server=localhost;Database=assignmentsystem;Uid=sqluser;Pwd=password;"
   },
+  "AppSettings": {
+    "Token": "Make sure it has at least 16 chars"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
